--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+title: Root
+description: Don't cry, sweetie.
+google_analytics: G-X5RWYS8P6T
 theme: jekyll-theme-cayman
+show_urls: true
+github:
+  root_url: https://www.imdb.com/title/tt1839578/characters/nm0009918
+  shaw_url: https://www.imdb.com/title/tt1839578/characters/nm1083404
+  description: Don't cry, sweetie.
